# BoberInSpire

./: .gitignore  BoberInSpire.sln  CHANGELOG.md  README.md  build.bat  installer.iss  promptfooconfig.yaml  requirements.txt  run_overlay.bat  run_overlay_debug.bat
STS2Mods/sts2_example_mod/: BoberInSpire.json  CombatExporter.cs  ExampleMod.csproj  ModEntry.cs  RewardExporter.cs
STS2Mods/sts2_example_mod/Patches/: CombatExportPatches.cs  RewardExportPatches.cs
data/: buffs_debuffs.json  spire_codex_cards.json  spire_codex_relics.json
data/build_guides/defect/: guide_archetypes.json  wiki_builds.json  wiki_builds.md
data/tier_lists/: README.md  mobalytics_cards.json  slaythespire2_com_cards.json
overlay-ui/: index.html  package-lock.json  package.json
overlay-ui/src/: App.css  App.tsx  overlayTypes.ts
overlay-ui/src-tauri/: Cargo.toml  tauri.conf.json
overlay-ui/src-tauri/capabilities/: default.json
overlay-ui/src-tauri/icons/: icon.icns
overlay-ui/src-tauri/src/: lib.rs  main.rs
python_app/: __init__.py  __main__.py  card_db.py  card_effects.py  combat_engine.py  data_parser.py  file_watcher.py  main.py  models.py  overlay.py  overlay_host.py  overlay_settings.py  overlay_view_model.py  paths.py  relic_db.py  reward_advisor.py  strategy.py  translator.py  utils.py
scripts/: build_guide_archetypes.py  extract_translations.py  scrape_mobalytics_ironclad_builds.py  scrape_mobalytics_tiers.py  update_build_and_tier_data.py
tests/: test_combat_engine.py  test_data_parser.py  test_relic_db.py  test_reward_advisor.py  test_utils.py
(+14 files in other folders)
